Chonker/Tests/Error/too_many_args.chonk
function void betterPrint(string text)
{
  print text;
}

betterPrint("Hello World but Better", "Very Evil Argument"); 